# NLP

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: Assignment_1.ipynb  Assignment_2.ipynb  Assignment_2_2.ipynb  Assignment_2_2_backup.ipynb  Assignment_2_backup.ipynb  Assignment_2_pre_learning_curve_backup.ipynb  EDA.ipynb  mlflow.db  optuna_bilstm.db  session_1_solutions.ipynb  session_2.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  session_2-checkpoint.ipynb
results/submissions/: dense_preds.json  sparse_preds.json
