[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim",
    "nltk",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "numpy",
    "scipy",
    "pyevall>=0.1.78",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
